# rename

./: README.md  RENAME.md  pyproject.toml
rename/: cmd.py  photos.py  screenshots.py
rename_images/: rename_photos.py  rename_screenshots.py
scripts/: cmd.py  pyproject.toml
