[project]
name = "rename"
version = "0.0.0"
description = "rename photos and screenshots to YYMMDD_HHMMSS.ext"
authors = [{name="Adam Neil Ormondroyd", email="Adam.Ormondroyd@gmail.com"}]
readme = "README.md"

[project.urls]
repository = "https://github.com/Ormorod/rename_images"

[tool.poetry.scripts]
rename_photos = "scripts.cmd:cmd_rename_photos"
rename_screenshots = "scripts.cmd:cmd_rename_screenshots"
