[project]
name = "rename"
version = "0.1.0"
description = "rename photos and screenshots to YYMMDD_HHMMSS.ext"
authors = [{name="Adam Neil Ormondroyd", email="Adam.Ormondroyd@gmail.com"}]
readme = "README.md"

[project.urls]
repository = "https://github.com/Ormorod/rename_images"

[project.scripts]
rename_photos = "rename.cmd:cmd_rename_photos"
rename_screenshots = "rename.cmd:cmd_rename_screenshots"
